Fix horizontal scrolling issue on Edge

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -3,7 +3,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 div.footer {
-  width: 100dvw;
+  width: 100%;
   margin-top: 0.3em;
   display: flex;
   justify-content: space-around;
